--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -1047,7 +1047,7 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: automated
+    status: manual
     rules:
     - set_iptables_outbound_n_established_connections_configured
 
