Revert 3.5.3.2.3 requirement status to manual
Rule checking is not automatic but consists only of guidelines so better revert it to manual

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -1013,7 +1013,7 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: automated
+    status: manual
     rules:
     - set_iptables_outbound_n_established_connections_configured
 
