--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -1197,7 +1197,7 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: automated
+    status: manual
     rules:
     - set_iptables_outbound_n_established_connections_configured
 
@@ -1235,7 +1235,7 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: automated
+    status: manual
     rules:
     - set_iptables_outbound_n_established_connections_configured
 
