--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -124,3 +124,54 @@ controls:
       - configure_libreswan_crypto_policy
       - configure_openssl_crypto_policy
       - configure_ssh_crypto_policy
+
+- id: 3.6
+    title: Files, permissions, and ownership
+    description: >-
+      user and critical system file permissions and ownership, user identifiers, 
+    status: partial
+    rules: 
+      # file config
+      - dir_perms_world_writable_sticky_bits
+      - file_permissions_unauthorized_world_writable
+      - no_files_unowned_by_user
+      - file_permissions_ungroupowned
+      # permission and ownership of critical files
+      - file_groupowner_etc_passwd
+      - file_owner_etc_passwd
+      - file_permissions_etc_passwd
+      - file_groupowner_etc_shadow
+      - file_owner_etc_shadow
+      - file_permissions_etc_shadow
+      - file_groupowner_etc_group
+      - file_owner_etc_group
+      - file_permissions_etc_group
+      - file_groupowner_etc_gshadow
+      - file_owner_etc_gshadow
+      - file_permissions_etc_gshadow
+      - file_groupowner_backup_etc_passwd
+      - file_owner_backup_etc_passwd
+      - file_permissions_backup_etc_passwd
+      - file_groupowner_backup_etc_shadow
+      - file_owner_backup_etc_shadow
+      - file_permissions_backup_etc_shadow
+      - file_groupowner_backup_etc_group
+      - file_owner_backup_etc_group
+      - file_permissions_backup_etc_group
+      - file_groupowner_backup_etc_gshadow 
+      - file_owner_backup_etc_gshadow
+      - file_permissions_backup_etc_gshadow
+      # user and group config
+      - no_empty_passwords_etc_shadow
+      - gid_passwd_group_same
+      - account_unique_id
+      - group_unique_id
+      - account_unique_name
+      - group_unique_name
+      - accounts_root_path_dirs_no_write
+      - accounts_no_uid_except_zero
+      - user_interactive_home_directory_exists
+      - file_ownership_home_directories
+      - file_groupownership_home_directories
+      - file_permissions_home_directories
+      - user_dot_no_world_writable_programs
