--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -189,7 +189,7 @@ controls:
   - id: 3.8
     title: GUI configuration
     description: >-
-      
+      do not show user list, disable xdmpc and auto login, set up idle lock and protect the settings
     status: automated
     rules: 
       - dconf_gnome_disable_user_list
