--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -201,4 +201,41 @@ controls:
       - dconf_gnome_screensaver_user_locks
       - dconf_gnome_session_idle_user_locks
  
-      
+    - id: 3.9
+    title: Time and schedulers
+    description: >-
+      chrony and time-based scheduler security configuration
+    status: automated
+    rules: 
+      # chrony
+      - chronyd_client_only
+      - chronyd_no_chronyc_network
+      - chronyd_or_ntpd_set_maxpoll
+      - chronyd_run_as_chrony_user
+      - chronyd_specify_remote_server
+      # schedulers
+      - service_crond_enabled
+      - file_owner_crontab
+      - file_groupowner_crontab
+      - file_permissions_crontab
+      - file_owner_cron_hourly
+      - file_groupowner_cron_hourly
+      - file_permissions_cron_hourly
+      - file_owner_cron_daily
+      - file_groupowner_cron_daily
+      - file_permissions_cron_daily
+      - file_owner_cron_weekly
+      - file_groupowner_cron_weekly
+      - file_permissions_cron_weekly
+      - file_owner_cron_monthly
+      - file_groupowner_cron_monthly
+      - file_permissions_cron_monthly
+      - file_owner_cron_d
+      - file_groupowner_cron_d
+      - file_permissions_cron_d
+      - file_owner_cron_allow
+      - file_groupowner_cron_allow
+      - file_permissions_cron_allow
+      - file_owner_at_allow
+      - file_groupowner_at_allow
+      - file_permissions_at_allow
