--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -125,6 +125,85 @@ controls:
       - configure_openssl_crypto_policy
       - configure_ssh_crypto_policy
 
+  - id: 3.5
+    title: Auditing and logging
+    description: >-
+      auditd and journald configutation
+    status: automated
+    rules: 
+      # auditd config
+      - package_audit_installed
+      - service_auditd_enabled
+      - grub2_audit_argument
+      - grub2_audit_backlog_limit_argument
+      - auditd_data_retention_max_log_file
+      - var_auditd_max_log_file=6
+      - auditd_data_retention_max_log_file_action
+      - var_auditd_max_log_file_action=rotate
+      # auditd rules
+      - audit_rules_sysadmin_actions
+      - audit_rules_suid_privilege_function
+      - audit_sudo_log_events
+      - audit_rules_time_adjtimex
+      - audit_rules_time_settimeofday
+      - audit_rules_time_clock_settime
+      - audit_rules_time_stime
+      - audit_rules_time_watch_localtime
+      - audit_rules_networkconfig_modification
+      - audit_rules_privileged_commands
+      - audit_rules_unsuccessful_file_modification_creat
+      - audit_rules_unsuccessful_file_modification_ftruncate
+      - audit_rules_unsuccessful_file_modification_open
+      - audit_rules_unsuccessful_file_modification_openat
+      - audit_rules_unsuccessful_file_modification_truncate
+      - audit_rules_unsuccessful_file_modification_creat
+      - audit_rules_unsuccessful_file_modification_ftruncate
+      - audit_rules_unsuccessful_file_modification_open
+      - audit_rules_unsuccessful_file_modification_openat
+      - audit_rules_unsuccessful_file_modification_truncate
+      - audit_rules_usergroup_modification_group
+      - audit_rules_usergroup_modification_gshadow
+      - audit_rules_usergroup_modification_opasswd
+      - audit_rules_usergroup_modification_passwd
+      - audit_rules_usergroup_modification_shadow
+      - audit_rules_dac_modification_chmod
+      - audit_rules_dac_modification_chown
+      - audit_rules_dac_modification_fchmod
+      - audit_rules_dac_modification_fchmodat
+      - audit_rules_dac_modification_fchown
+      - audit_rules_dac_modification_fchownat
+      - audit_rules_dac_modification_fremovexattr
+      - audit_rules_dac_modification_fsetxattr
+      - audit_rules_dac_modification_lchown
+      - audit_rules_dac_modification_lremovexattr
+      - audit_rules_dac_modification_lsetxattr
+      - audit_rules_dac_modification_removexattr
+      - audit_rules_dac_modification_setxattr
+      - audit_rules_media_export
+      - audit_rules_session_events
+      - audit_rules_login_events_faillock
+      - audit_rules_login_events_lastlog
+      - audit_rules_file_deletion_events_rename
+      - audit_rules_file_deletion_events_renameat
+      - audit_rules_file_deletion_events_unlink
+      - audit_rules_file_deletion_events_unlinkat
+      - audit_rules_mac_modification
+      - audit_rules_mac_modification_usr_share
+      - audit_rules_execution_chcon
+      - audit_rules_execution_setfacl
+      - audit_rules_execution_chacl
+      - audit_rules_privileged_commands_usermod
+      - audit_rules_kernel_module_loading_delete
+      - audit_rules_kernel_module_loading_init
+      - audit_rules_privileged_commands_insmod
+      - audit_rules_privileged_commands_modprobe
+      - audit_rules_privileged_commands_rmmod
+      - audit_rules_immutable
+      # journald config
+      - socket_systemd-journal-remote_disabled
+      - service_systemd-journald_enabled
+      - journald_compress
+
 - id: 3.6
     title: Files, permissions, and ownership
     description: >-
