Add journald rule to 3.6

--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -203,6 +203,7 @@ controls:
       - socket_systemd-journal-remote_disabled
       - service_systemd-journald_enabled
       - journald_compress
+      - journald_storage
 
 - id: 3.6
     title: Files, permissions, and ownership
