fix: service_auditd_enabled: skip testing under podman-based env
auditd needs access to kernel audit service and it is not supported
under podman if running unprivileged containers.

--- a/linux_os/guide/system/auditing/service_auditd_enabled/rule.yml
+++ b/linux_os/guide/system/auditing/service_auditd_enabled/rule.yml
@@ -92,3 +92,5 @@ template:
         packagename@ubuntu1804: auditd
         packagename@ubuntu2004: auditd
         packagename@ubuntu2204: auditd
+        # Testing needs CAP_AUDIT_* and those are not available under podman
+        skip_test_env: podman-based
