fix: service_fapolicyd_enabled: skip testing under podman-based env
fapolicyd needs extra capabilities and it is not reasonable to test it
under podman.

--- a/linux_os/guide/services/fapolicyd/service_fapolicyd_enabled/rule.yml
+++ b/linux_os/guide/services/fapolicyd/service_fapolicyd_enabled/rule.yml
@@ -41,3 +41,5 @@ template:
     name: service_enabled
     vars:
         servicename: fapolicyd
+        # needs CAP_DAC_OVERRIDE,CAP_SETGID,CAP_SETUID,CAP_SYS_PTRACE,CAP_SYS_ADMIN,CAP_SYS_NICE,CAP_SYS_RESOURCE,CAP_AUDIT_WRITE, as podman is run using normal user, there seems to be no way to elevate
+        skip_test_env: podman-based
