Fix rule definitions and warnings to more clear

--- a/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
@@ -8,8 +8,8 @@ description: |-
     While the system administrator can establish secure permissions for users' .netrc files, the
     users can easily override these.
 
-    This rule ensures every file or directory under the home directory related
-    to an interactive user is group-owned by an interactive user.
+    This rule ensures every .netrc file or directory under the home directory related
+    to an interactive user is not group or world accessible
 
 rationale: |-
     .netrc files may contain unencrypted passwords that may be used to attack other systems.
@@ -26,16 +26,9 @@ references:
     cis@sle12: 6.2.11
     cis@sle15: 6.2.11
 
-ocil_clause: 'the group ownership is incorrect'
+ocil_clause: 'the group and world permissions are incorrect'
 
 ocil: |-
-    To verify .netrc file in interactive user home directory is
-    group-owned by a group the user is a member of, run the
-    following command:
+    To verify .netrc file  in interactive user home directory is
+    not group or world accessible", run the following command:
     <pre>$ sudo ls -lLR /home/<i>USER</i>/.netrc</pre>
-
-warnings:
-    - general: |-
-       Due to OVAL limitations, this rule can report a false negative in a
-       specific situation where two interactive users swap the group-ownership
-       of folders or files in their respective home directories.
