--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -319,3 +319,51 @@ controls:
       - file_owner_at_allow
       - file_groupowner_at_allow
       - file_permissions_at_allow
+###
+### 4. User access and control
+###
+  - id: 4.1
+    title: Account protection
+    description: >-
+      All account passwords must be passphrases of at least 4 words and 15 characters with at least three character classes, generated with a large wordlist and a source of randomness.
+    status: partial
+    rules:
+      - no_empty_passwords
+      - accounts_passwords_pam_faillock_deny
+      - set_password_hashing_algorithm_systemauth
+      - set_password_hashing_algorithm_passwordauth
+      - set_password_hashing_algorithm_logindefs
+      - var_password_hashing_algorithm=SHA512
+      - no_password_auth_for_systemaccounts
+      - accounts_tmout
+      - var_accounts_tmout=15_min
+      - accounts_root_gid_zero
+      - accounts_umask_etc_bashrc
+      - accounts_umask_etc_login_defs
+      - accounts_umask_etc_profile
+      - var_accounts_user_umask=027
+      - account_password_selinux_faillock_dir
+      - rule_enable_authselect
+      # password requirements
+      - accounts_password_pam_pwquality_password_auth
+      - accounts_password_pam_pwquality_system_auth
+      - accounts_password_pam_maxrepeat
+      - accounts_password_pam_minclass
+      - accounts_password_pam_minlen
+      - accounts_password_pam_retry
+      - var_password_pam_minclass=3
+      - var_password_pam_minlen=15
+      # account lockout
+      - accounts_passwords_pam_faillock_dir
+      - accounts_passwords_pam_faillock_deny
+      - var_accounts_passwords_pam_faillock_deny=3
+      - accounts_passwords_pam_faillock_unlock_time
+      - var_accounts_passwords_pam_faillock_unlock_time=900
+      # password reuse
+      - accounts_password_pam_pwhistory_remember_password_auth
+      - accounts_password_pam_pwhistory_remember_system_auth
+      - var_password_pam_remember_control_flag=requisite_or_required
+      - var_password_pam_remember=5
+      - accounts_password_pam_difok
+      - var_password_pam_difok=8
+      
