--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -420,3 +420,7 @@ controls:
       - sshd_disable_kerb_auth
       - sshd_disable_gssapi_auth
       - sshd_enable_strictmodes
+      - sshd_rekey_limit
+      - var_rekey_limit_size='1G'
+      - var_rekey_limit_time='1h'
+      - sshd_use_strong_rng
