--- a/controls/cis_rhel8.yml
+++ b/controls/cis_rhel8.yml
@@ -1116,14 +1116,14 @@ controls:
       - l1_workstation
     status: planned
 
-  # NEEDS RULE
-  # https://github.com/ComplianceAsCode/content/issues/5239
   - id: 3.4.1.3
     title: Ensure nftables is not enabled with firewalld (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: planned
+    status: automated
+    rules:
+      - service_nftables_disabled
 
   - id: 3.4.1.4
     title: Ensure firewalld service is enabled and running (Automated)
