--- a/linux_os/guide/services/mail/has_nonlocal_mta/rule.yml
+++ b/linux_os/guide/services/mail/has_nonlocal_mta/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ubuntu2004,ubuntu2204
+prodtype: rhel7,rhel8,rhel9,ubuntu2004,ubuntu2204
 
 title: 'Ensure Mail Transfer Agent is not Listening on any non-loopback Address'
 
@@ -19,7 +19,15 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@rhel7: CCE-88497-3
+    cce@rhel8: CCE-88498-1
+    cce@rhel9: CCE-88499-9
+
 references:
+    cis@rhel7: 2.2.16
+    cis@rhel8: 2.2.17
+    cis@rhel9: 2.2.15
     cis@ubuntu2004: 2.2.15
     cis@ubuntu2204: 2.2.15
 
