--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -759,8 +759,9 @@ controls:
     - l1_workstation
     status: automated
     rules:
-    - postfix_network_listening_disabled
-    - var_postfix_inet_interfaces=loopback-only
+      - postfix_network_listening_disabled
+      - var_postfix_inet_interfaces=loopback-only
+      - has_nonlocal_mta
 
   - id: 2.2.17
     title: Ensure nfs-utils is not installed or the nfs-server service is masked (Automated)
