Add to pcidss4 profile ntp and timesyncd rules
Make sure those rules are part of the control, but are not part of the SLE profile

--- a/controls/pcidss_4.yml
+++ b/controls/pcidss_4.yml
@@ -2320,6 +2320,9 @@ controls:
       - service_chronyd_or_ntpd_enabled
       - ntpd_specify_remote_server
       - package_chrony_installed
+      - service_ntp_enabled
+      - service_ntpd_enabled
+      - service_timesyncd_enabled
 
     - id: 10.6.2
       title: 'Systems are configured to the correct and consistent time'
