fix: extra_ovals: package_prelink_removed: fix title to match rule
There is also rule:

linux_os/guide/system/software/integrity/package_prelink_removed/rule.yml

set title to match that so that created oval.xml are exactly the same.

--- a/shared/templates/extra_ovals.yml
+++ b/shared/templates/extra_ovals.yml
@@ -42,6 +42,7 @@ package_samba-common_removed:
     pkgname: samba-common
 
 package_prelink_removed:
+  title: Package "prelink" Must not be Installed
   name: package_removed
   vars:
     pkgname: prelink
