Enable iptables and ip6tables rules for RHEL7

--- a/linux_os/guide/system/network/network-iptables/iptables_activation/set_ip6tables_default_rule/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_activation/set_ip6tables_default_rule/rule.yml
@@ -21,6 +21,7 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86718-4
     cce@rhel8: CCE-85965-2
     cce@rhel9: CCE-85966-0
     cce@sle12: CCE-91648-6
@@ -28,6 +29,7 @@ identifiers:
 
 references:
     cis-csc: 11,14,3,9
+    cis@rhel7: 3.5.3.3.4
     cis@rhel8: 3.4.3.3.4
     cis@sle12: 3.5.3.4
     cis@sle15: 3.5.3.3.1
