--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_default_rule/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_default_rule/rule.yml
@@ -19,6 +19,7 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86719-2
     cce@rhel8: CCE-85968-6
     cce@rhel9: CCE-85969-4
     cce@sle12: CCE-92333-4
@@ -26,6 +27,7 @@ identifiers:
 
 references:
     cis-csc: 11,14,3,9
+    cis@rhel7: 3.5.3.2.4
     cis@rhel8: 3.4.3.2.4
     cis@sle15: 3.5.3.2.1
     cis@ubuntu2004: 3.5.3.2.1
