Enable service_nftables_enabled for RHEL7 and RHEL8
This rule satisfies CIS requirements for RHEL7 and RHEL8. However, the
benchmark allows to choose any of the options among firewalld, iptables
and nftables. This is outdated in the benchmark and should be changed
soon. Actually, iptables and nftables are possible backends for
firewalld.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1143,7 +1143,13 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    notes: |-
+      nftables can be a backend for firewalld but its service does not need to be running.
+      Otherwise, it will conflict with firewalld service. The preferred service to manage firewall
+      rules is firewalld. In addition, the default backend in RHEL7 is iptables.
+    status: automated
+    related_rules:
+      - service_nftables_enabled
 
   - id: 3.5.2.11
     title: Ensure nftables rules are permanent (Automated)
