--- a/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle15,ubuntu2004,ubuntu2204
+prodtype: rhel7,rhel8,sle15,ubuntu2004,ubuntu2204
 
 title: 'Verify nftables Service is Enabled'
 
@@ -14,13 +14,16 @@ rationale: |-
     in the <tt>/etc/sysconfig/nftables.conf</tt> file during boot or the starting of
     the nftables service
 
-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86723-4
+    cce@rhel8: CCE-86725-9
     cce@sle15: CCE-92560-2
 
 references:
+    cis@rhel7: 3.5.2.10
+    cis@rhel8: 3.4.2.10
     cis@sle15: 3.5.2.9
     cis@ubuntu2004: 3.5.2.9
     cis@ubuntu2204: 3.5.2.9
