--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/iptables_rules_for_open_ports/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/iptables_rules_for_open_ports/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ubuntu2204
+prodtype: rhel7,rhel8,ubuntu2204
 
 title: 'Ensure iptables Firewall Rules Exist for All Open Ports'
 
@@ -14,7 +14,13 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@rhel7: CCE-86770-5
+    cce@rhel8: CCE-86771-3
+
 references:
+    cis@rhel7: 3.5.3.2.3
+    cis@rhel8: 3.4.3.2.3
     cis@ubuntu2204: 3.5.3.2.4
 
 ocil_clause: 'open ports are denied connection'
