--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1241,7 +1241,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: partial
+    notes: |-
+      Currently the check is only available in SCE and an automated remediation is not expected.
+    rules:
+      - ip6tables_rules_for_open_ports
 
   - id: 3.5.3.3.4
     title: Ensure ip6tables default deny firewall policy (Automated)
