--- a/tests/unit/ssg-module/data/templates/extra_ovals.yml
+++ b/tests/unit/ssg-module/data/templates/extra_ovals.yml
@@ -5,3 +5,8 @@ package_avahi_installed:
     pkgname@ubuntu2004: avahi-daemon
     pkgname@rhel8: avahi8
 
+package_prelink_installed:
+  title: Package "prelink" Must be Installed
+  name: package_installed
+  vars:
+    pkgname: prelink
