Update OL9 STIG profile
Signed-off-by: Edgar Aguilar <edgar.aguilar@oracle.com>

--- a/controls/srg_gpos/SRG-OS-000366-GPOS-00153.yml
+++ b/controls/srg_gpos/SRG-OS-000366-GPOS-00153.yml
@@ -15,5 +15,6 @@ controls:
             {{% if 'rhel' in product %}}
             - ensure_redhat_gpgkey_installed
             {{% endif %}}
+            - ensure_oracle_gpgkey_installed
 
         status: automated
