--- a/linux_os/guide/services/ssh/ssh_server/sshd_disable_compression/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_disable_compression/rule.yml
@@ -23,6 +23,7 @@ identifiers:
     cce@rhel8: CCE-80895-6
     cce@rhel9: CCE-90801-2
     cce@sle12: CCE-83062-0
+    cce@sle15: CCE-85647-6
 
 references:
     cis-csc: 11,3,9
