--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_ciphers/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_ciphers/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ol7,rhel7,sle12,sle15
+prodtype: ol7,rhel7,sle12,sle15,ubuntu2204
 
 title: 'Use Only Strong Ciphers'
 
@@ -31,6 +31,7 @@ references:
     cis@debian: 9.3.11
     cis@sle12: 5.2.13
     cis@sle15: 5.2.13
+    cis@ubuntu2204: 5.2.13
 
 ocil_clause: 'ciphers are not configured or not using strong ciphers'
 
