--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_macs/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_macs/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ol7,rhel7,sle12,sle15
+prodtype: ol7,rhel7,sle12,sle15,ubuntu2204
 
 title: 'Use Only Strong MACs'
 
@@ -27,6 +27,7 @@ identifiers:
 references:
     cis@sle12: 5.2.14
     cis@sle15: 5.2.14
+    cis@ubuntu2204: 5.2.14
 
 ocil_clause: 'MACs option is commented out or not using strong hash algorithms'
 
