bugfix: mount_option: handle commented lines
From fstab(5):
...
       Each filesystem is described on a separate line. Fields on each
       line are separated by tabs or spaces. Lines starting with '#' are
       comments. Blank lines are ignored.
...

Line like:
  # /var needs dev
should be ignored.

Add test for this issue.

--- a/shared/templates/mount_option/oval.template
+++ b/shared/templates/mount_option/oval.template
@@ -38,7 +38,7 @@
   <ind:textfilecontent54_object version="1"
     id="object_{{{ local_id }}}_in_fstab">
     <ind:filepath>/etc/fstab</ind:filepath>
-    <ind:pattern operation="pattern match">^[\s]*[\S]+[\s]+{{{ POINTREGEX }}}[\s]+[\S]+[\s]+([\S]+)</ind:pattern>
+    <ind:pattern operation="pattern match">^[\s]*(?!#)[\S]+[\s]+{{{ POINTREGEX }}}[\s]+[\S]+[\s]+([\S]+)</ind:pattern>
     <ind:instance datatype="int">1</ind:instance>
   </ind:textfilecontent54_object>
 
