Use sysctl_remediate_drop_in_file property
Instead of using per product logn conditions in templates and rules/fixes, use property defined on per product basis.
Thanks to @yuumasato for the hint

--- a/products/sle12/product.yml
+++ b/products/sle12/product.yml
@@ -39,3 +39,5 @@ reference_uris:
   cis: 'https://www.cisecurity.org/benchmark/suse_linux/'
 
 dconf_gdm_dir: "gdm.d"
+
+sysctl_remediate_drop_in_file: "true"
