--- a/products/sle15/product.yml
+++ b/products/sle15/product.yml
@@ -44,3 +44,5 @@ reference_uris:
   cis: 'https://www.cisecurity.org/benchmark/suse_linux/'
 
 dconf_gdm_dir: "gdm.d"
+
+sysctl_remediate_drop_in_file: "true"
