fix: sysctl_kernel_perf_event_paranoid: can not be tested podman-based

--- a/linux_os/guide/system/permissions/restrictions/sysctl_kernel_perf_event_paranoid/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_kernel_perf_event_paranoid/rule.yml
@@ -44,3 +44,4 @@ template:
         sysctlvar: kernel.perf_event_paranoid
         sysctlval: '2'
         datatype: int
+        skip_test_env: podman-based
