bugfix: install_vm: support biosboot
At least qemu / libvirt in Fedora 37 seemed to need this.

qemu-kvm-7.0.0-15.fc37.x86_64
libvirt-daemon-8.6.0-5.fc37.x86_64

--- a/tests/kickstarts/test_suite.cfg
+++ b/tests/kickstarts/test_suite.cfg
@@ -68,6 +68,7 @@ zerombr
 clearpart --linux --initlabel
 
 # Create primary system partitions (required for installs)
+part biosboot --fstype biosboot --size=1
 part /boot --fstype=xfs --size=512 --fsoptions="nosuid,noexec"
 part pv.01 --grow --size=1
 
