Update rule description about block devices
The rule description was subtly updated to make it clear that only block
device partitions will be checked.

--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/rule.yml
@@ -4,9 +4,9 @@ title: 'Ensure auditd Collects Information on the Use of Privileged Commands'
 
 description: |-
     The audit system should collect information about usage of privileged commands for all users.
-    These are commands with suid or sgid bits on and they are specially risky in partitions not
-    mounted with noexec and nosuid options. Therefore, these partitions should be first identified
-    by the following command:
+    These are commands with suid or sgid bits on and they are specially risky in local block
+    device partitions not mounted with noexec and nosuid options. Therefore, these partitions
+    should be first identified by the following command:
     <pre>findmnt -n -l -k -it $(awk '/nodev/ { print $2 }' /proc/filesystems | paste -sd,) | grep -Pv "noexec|nosuid"</pre>
 
     For all partitions listed by the previous command, it is necessary to search for
