Fix rule 3.10 title

--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -323,7 +323,7 @@ controls:
       - file_permissions_at_allow
      
   - id: 3.10
-    title: Service and package minimization
+    title: Service minimization
     description: >-
       The user should remove any services that are not necessary for normal system usage. 
     status: partial
