Fix change in enable_authselect Ansible remediation
The a7cdf351071949a488c21de07fa2a341263abea8 changed the Ansible
Playbook behavior aiming to satisfy the ansible-lint. However, the
change allowed a task intended to only collect information to cause a
fatal error in the Playbook. The taks should not cause fatal error
because its result is intentionally tested by subsequent tasks.

--- a/linux_os/guide/system/accounts/enable_authselect/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/enable_authselect/ansible/shared.yml
@@ -10,7 +10,7 @@
   ansible.builtin.command:
     cmd: authselect select "{{ var_authselect_profile }}"
   register: result_authselect_select
-  failed_when: result_authselect_select.rc not in [0, 4]
+  failed_when: false
 
 - name: Verify if PAM has been altered
   ansible.builtin.command:
