Enable ensure_root_password_configured for RHEL9
This rule complements the 5.6.6 CIS requirement for RHEL9.

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -2237,6 +2237,7 @@ controls:
       - l1_workstation
     status: automated
     rules:
+      - ensure_root_password_configured
       - no_empty_passwords_etc_shadow
 
   - id: 6.1.1
