--- a/linux_os/guide/system/accounts/accounts-restrictions/root_logins/ensure_root_password_configured/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/root_logins/ensure_root_password_configured/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ubuntu2004,ubuntu2204
+prodtype: rhel9,ubuntu2004,ubuntu2204
 
 title: 'Ensure Authentication Required for Single User Mode'
 
@@ -15,7 +15,11 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@rhel9: CCE-87101-2
+
 references:
+    cis@rhel9: 5.6.6
     cis@ubuntu2004: 1.5.3
     cis@ubuntu2204: 1.4.3
 
